--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -804,8 +804,7 @@
 
       document.onreadystatechange =  function disclaimerAlert() {
           if (document.readyState=='loaded' || document.readyState=='complete') {
-              alert("Note: After clicking anything, the display will update only after reading back the coldbox state!\n
-                    So be patient before double-clicking!");
+              alert("Note: After clicking anything, the display will update only after reading back the coldbox state!\n So be patient before double-clicking!");
           }
       }
     </script>
