--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -63,7 +63,7 @@
         <b>tessie control: </b> <br>
         TEC Firmware: 
         <button id="loadFW">Load</button>
-        <button id="saveFW">Save</button>
+        <button id="saveFW">Save</button><br>
         CSV data:
         <button id="getcsv" disabled>Get CSV data</button>
       </div>
