--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -90,6 +90,10 @@
             <td>Dew point</td>
             <td id="DP" style="text-align:right;">0 </td>
           </tr>
+          <tr>
+            <td>Flow meter</td>
+            <td id="FM" style="text-align:right;">0 </td>
+          </tr>
         </table>
       </div>
 
@@ -490,7 +494,11 @@
           let lidStatus     = vNumbers[3].replace("L", "");
           let interLock     = vNumbers[4].replace("I", "");
           let freeDiskspace = parseInt(vNumbers[5]);
-
+          let statusFM      = -1; 
+          if (vNumbers.length > 6) {
+              statusFM =  parseInt(vNumbers[6]);
+          }
+          
           var el = document.getElementById('LidStatus');
           if (1 == lidStatus) {
               el.innerHTML = "locked";
@@ -499,6 +507,7 @@
               el.innerHTML = "open";
               el.style.backgroundColor = mycolors[6];
           }
+
           el = document.getElementById('Interlock');
           if (1 == interLock) {
               el.innerHTML = "good";
@@ -507,6 +516,7 @@
               el.innerHTML = "bad";
               el.style.backgroundColor = mycolors[8];
           }
+
           el = document.getElementById('FreeDiskspace');
           el.innerHTML = freeDiskspace + " GB";
           if (freeDiskspace > 2) {
@@ -517,6 +527,17 @@
               el.style.backgroundColor = mycolors[8];
           }
 
+          el = document.getElementById('FM');
+          el.innerHTML = statusFM;
+          if (statusFM < 0) {
+              el.style.backgroundColor = mycolors[1];
+          } else if (0 == statusFM) {
+              el.style.backgroundColor = mycolors[8];
+          } else {
+              el.style.backgroundColor = mycolors[6];
+          }
+
+          
           if ("1" == greenLight) {
               document.getElementById('circleG').style = "fill: green; stroke: green; stroke-width: 2";
           } else {
