--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -497,7 +497,7 @@
           let statusFM      = -1; 
           console.log(vNumbers.length);
           if (vNumbers.length > 6) {
-              statusFM =  parseInt(parseInt(vNumbers[6].replace("F", ""));
+              statusFM =  parseInt(parseInt(vNumbers[6].replace("F", "")));
           }
           
           var el = document.getElementById('LidStatus');
