--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -41,6 +41,8 @@
         <b>Nitrogen control: </b> <br>
         <button id="valve0" style="background-color:#D3D3D3">Flush</button>
         <button id="valve1" style="background-color:#D3D3D3">Rinse</button>
+        <label><input id="throttleN2" name="throttleN2" type="checkbox" onclick="clkThrottle()"/>throttle N2</label>
+
         <hr>
         TEC arrangement:
         <table style="border-collapse: collapse">
@@ -811,6 +813,18 @@
           socket.emit('checktec', msg);
       }
 
+      function clkThrottle() {
+          let msg = "cmd ";
+          if (document.getElementById("throttleN2").checked) {
+              msg = msg + " throttleN2On";
+          } else {
+              msg = msg + " throttleN2Off";
+          }
+          console.log(ct + " " + msg);
+          socket.emit('checktec', msg);
+      }
+
+      
       function formatNow(){
           var x = new Date();
           var dd = x.getDate();
