correct terminology: meter -> switch

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -106,7 +106,7 @@
             <td id="FreeDiskspace" style="text-align:right;">0 </td>
           </tr>
           <tr>
-            <td>Flow meter</td>
+            <td>Flow switch</td>
             <td id="FM" style="text-align:right;">0 </td>
           </tr>
           <tr>
