add help; change MQTT thread name

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -821,7 +821,7 @@
               msg = msg + " throttleN2Off";
           }
           console.log(ct + " " + msg);
-          socket.emit('checktec', msg);
+          socket.emit('throttle', msg);
       }
 
       
