--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -146,7 +146,7 @@
           </tr>
           <tr>
             <td>TEC f/w version</td>
-            <td id="tecfwField" style="text-align:right;">n/a </td>
+            <td id="fwverField" style="text-align:right;">n/a </td>
           </tr>
         </table>
       </div>
