--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -254,6 +254,19 @@
         </tr>
 
         <tr>
+          <td>Errorstate (0=OK, 1=Error)</td>
+          <td> </td>
+          <td id="ErrorState1">wait </td>
+          <td id="ErrorState2">wait </td>
+          <td id="ErrorState3">wait </td>
+          <td id="ErrorState4">wait </td>
+          <td id="ErrorState5">wait </td>
+          <td id="ErrorState6">wait </td>
+          <td id="ErrorState7">wait </td>
+          <td id="ErrorState8">wait </td>
+        </tr>
+
+        <tr>
           <td>Supply_U</td>
           <td> </td>
           <td id="Supply_U1">wait </td>
@@ -738,6 +751,22 @@
               let tm = 'Temp_Set' + i.toString();
               if (document.activeElement != document.getElementById(tm))
                   document.getElementById(tm).value = parseFloat(vNumbers[i-1]).toFixed(2);
+          }
+      });
+
+      socket.on('ErrorString', (msg) => {
+          const snumbers = msg.toString().replace('ErrorString = ', '');
+          const vNumbers = snumbers.split(',');
+          for (let i = 1; i <= 8; i++) {
+              let es = 'ErrorState' + i.toString();
+              if (document.activeElement != document.getElementById(es))
+                  if (parseInt(vNumbers[i-1]) > 0) {
+                      document.getElementById(es).value = 1;
+                      document.getElementById(es).backgroundColor = mycolors[8];
+                  } else {
+                      document.getElementById(es).value = 0;
+                      document.getElementById(es).backgroundColor = mycolors[4];
+                  }
           }
       });
 
