--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -759,6 +759,7 @@
           const snumbers = msg.toString().replace('ErrorString = ', '');
           const vNumbers = snumbers.split(',');
           for (let i = 1; i <= 8; i++) {
+              console.log("parseInt(vNumbers[i-1]): " + parseInt(vNumbers[i-1]));
               let es = 'ErrorState' + i.toString();
               if (parseInt(vNumbers[i-1]) > 0) {
                   document.getElementById(es).value = 1;
