--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -762,10 +762,10 @@
               console.log("parseInt(vNumbers[i-1]): " + parseInt(vNumbers[i-1]));
               let es = 'ErrorState' + i.toString();
               if (parseInt(vNumbers[i-1]) > 0) {
-                  document.getElementById(es).value = 1;
+                  document.getElementById(es).value = "1";
                   document.getElementById(es).backgroundColor = mycolors[8];
               } else {
-                  document.getElementById(es).value = 0;
+                  document.getElementById(es).value = "0";
                   document.getElementById(es).backgroundColor = mycolors[4];
               }
           }
