--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -755,12 +755,11 @@
       });
 
       socket.on('ErrorString', (msg) => {
-          console.log("ErrorString ->" + msg);
           const snumbers = msg.toString().replace('Error = ', '');
           const vNumbers = snumbers.split(',');
           for (let i = 1; i <= 8; i++) {
-              console.log("parseInt(vNumbers[i-1]): " + parseInt(vNumbers[i-1]));
               let es = 'ErrorState' + i.toString();
+              console.log(es);
               if (parseInt(vNumbers[i-1]) > 0) {
                   document.getElementById(es).value = "1";
                   document.getElementById(es).backgroundColor = mycolors[8];
