move to error  buttons

--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -256,14 +256,14 @@
         <tr>
           <td>Errorstate (0=OK, 1=Error)</td>
           <td> </td>
-          <button id="ErrorState1">wait </button>
-          <button id="ErrorState2">wait </button>
-          <button id="ErrorState3">wait </button>
-          <button id="ErrorState4">wait </button>
-          <button id="ErrorState5">wait </button>
-          <button id="ErrorState6">wait </button>
-          <button id="ErrorState7">wait </button>
-          <button id="ErrorState8">wait </button>
+          <td><button id="ErrorState1">wait </button></td>
+          <td><button id="ErrorState2">wait </button></td>
+          <td><button id="ErrorState3">wait </button></td>
+          <td><button id="ErrorState4">wait </button></td>
+          <td><button id="ErrorState5">wait </button></td>
+          <td><button id="ErrorState6">wait </button></td>
+          <td><button id="ErrorState7">wait </button></td>
+          <td><button id="ErrorState8">wait </button></td>
         </tr>
 
         <tr>
