--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -1035,13 +1035,29 @@
               20:"Ref_U"
           };
 
+          const VARH_ERROR = {
+              0x1: "VARH_ERROR_INVALID_VARIABLE",      
+              0x2: "VARH_ERROR_INVALID_DATA",
+              0x4: "VARH_ERROR_READONLY",
+              0x8: "VARH_ERROR_OUTOFRANGE",
+              0x10: "VARH_ERROR_OUTOFRANGE_INT" ,
+              0x20: "VARH_ERROR_LOAD_FLASH"
+          };
+ 
+
           let cat = (tecerr & 0xff000000)>>24;
           let reg = (tecerr & 0x0000ff00)>>8;
           let err = (tecerr & 0x000000ff);
+          let errtext = "";
+          if (err == 6) {
+              for (let ie = 0; ie < VARH_ERROR.size(); ie++) {
+                  if (err & VARH_ERROR[ie]) errtext.concat(VARH_ERROR[ie], " ");
+              }
+          }
           let str = "";
           let msg = str.concat("category ", cat.toString(), " (", catDict[cat],
                                ") <br> register ", reg.toString(), " (", regDict[reg],
-                               ") <br> error ", err.toString());
+                               ") <br> error ", err.toString(), "(", errtext, ")");
           return msg;
       }
 
