--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -1049,7 +1049,7 @@
           let reg = (tecerr & 0x0000ff00)>>8;
           let err = (tecerr & 0x000000ff);
           let errtext = "";
-          if (err == 6) {
+          if (cat == 6) {
               for (let ie = 0; ie < VARH_ERROR.size(); ie++) {
                   if (err & VARH_ERROR[ie]) errtext.concat(VARH_ERROR[ie], " ");
               }
