--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -1050,6 +1050,7 @@
           let err = (tecerr & 0x000000ff);
           let errtext = "";
           if (cat == 6) {
+              console.log("cat == 6");
               for (let ie = 0; ie < VARH_ERROR.size; ie++) {
                   if (err & VARH_ERROR[ie]) errtext.concat(VARH_ERROR[ie], " ");
               }
@@ -1073,7 +1074,6 @@
       for (let itec = 1; itec <= 8; itec++) {
           let ps = 'tec' + itec.toString() + 'pop';
           document.getElementById("ErrorState" + itec.toString()).addEventListener('click', (e) => {
-              console.log("ps ->" + ps + "<-");
               const popupOpened = document.getElementById(ps).togglePopover();
               // Check if popover is opened or closed on supporting browsers
               if (popupOpened !== undefined) {
