--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -1050,9 +1050,9 @@
           let err = (tecerr & 0x000000ff);
           let errtext = "";
           if (cat == 6) {
-              console.log("cat == 6");
+              console.log("cat == 6" + " err = " + err );
               for (let ie = 0; ie < VARH_ERROR.size; ie++) {
-                  if (err & VARH_ERROR[ie]) errtext.concat(VARH_ERROR[ie], " ");
+                  if (err & ie) errtext.concat(VARH_ERROR[ie], " ");
               }
           }
           let str = "";
