--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -1051,7 +1051,7 @@
           let errtext = "";
           if (cat == 6) {
               for (const [key, value] of Object.entries(VARH_ERROR)) {
-                  let eak = err&key;
+                  let eak = (err&key == key);
                   console.log("cat == 6" + " err = " + err + " key = " + key + " value = " + value + " eak = " + eak);
                   if (err&key) errtext.concat(value, " ");
               }
