--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -1051,9 +1051,9 @@
           let errtext = "";
           if (cat == 6) {
               for (const [key, value] of Object.entries(VARH_ERROR)) {
-                  let eak = (err&key == key);
+                  let eak = err&key;
                   console.log("cat == 6" + " err = " + err + " key = " + key + " value = " + value + " eak = " + eak);
-                  if (err&key) errtext.concat(value, " ");
+                  if (eak > 0) errtext.concat(value, " ");
               }
           }
           let str = "";
