--- a/node/test1/public/index.html
+++ b/node/test1/public/index.html
@@ -390,7 +390,7 @@
       <h2 id="tec1errorTitle"></h2>
       <p id="tec1errorValue"></p>
       <p id="tec1errorExplanation"></p>
-      <p>Press ESC (escape) to close this notice</p>
+      <p>Click outside or press ESC to close this notice</p>
     </div>
     <div id="tec2pop" popover>
       <h2 id="tec2errorTitle"></h2>
